Engine is now a Static Library also some cleanup and maintainance

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,7 +4,13 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=323,29
-Size=550,680
+Pos=280,41
+Size=323,656
 Collapsed=0
+
+[Window][DockSpace Demo]
+Size=1604,1095
+Collapsed=0
+
+[Docking][Data]
 
