Abstracted Refrence countted pointers

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -13,5 +13,11 @@ Collapsed=0
 Size=1604,1095
 Collapsed=0
 
+[Window][Settings]
+ViewportPos=1667,721
+ViewportId=0x1C33C293
+Size=432,269
+Collapsed=0
+
 [Docking][Data]
 
